Created initial CSS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>TestSite</h1>
+            <h1>Testsite</h1>
         </header>
         <main>
             There once was a college student named Jay. He wasn't the greatest but certainly was great.
