updating index page with main content

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         </header>
         <main>
             There once was a college student named Jay. He wasn't the greatest but certainly was great.
+            This is some more content for another GitHub Practice. 
         </main>
     </body>
 </html>
