--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <head>
         <meta charset-utf-8>
         <link href="css/winter.css" rel="stylesheet">
+        <title>The Test Site for the Jay Man</title>
     </head>
     <body>
         <header>
-            <h1>Testsite</h1>
+            <h1>Test Site</h1>
         </header>
         <main>
-            There once was a college student named Jay. He wasn't the greatest but certainly was great.
-            This is some more content for another GitHub Practice. 
+            <h2>There once was a college student named Jay. He wasn't the greatest but certainly was great.</h2>
+            <p>This is some more content for another GitHub Practice.</p>
         </main>
     </body>
 </html>
