adding image and some more specific content

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     </head>
     <body>
         <header>
-            <h1>Testsite</h1>
+            <h1>National Parks</h1>
         </header>
         <main>
-            There once was a college student named Jay. He wasn't the greatest but certainly was great.
-            This is some more content for another GitHub Practice. 
+            <p>Did you know there are 63 National Parks in the United states.</p>
+            <p>There once was a college student named Jay. He wasn't the greatest but certainly was great.</p>
+            <p>This is some more content for another GitHub Practice.</p>
+            <img src="images/Half_Dome_Yosemite.png" alt="Half Dome Yosemite" height="500vh">
         </main>
     </body>
 </html>
